--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,7 @@
 @import "~bootstrap/scss/bootstrap";
 @import "modules/navbar.scss";
 @import "modules/_variables.scss";
+@import "modules/category.scss";
 
 body {
     background-color: var(--secondaryColor);
