--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -6,6 +6,15 @@
 
 {% block body %}
 
-    <h1>{{ website }} index</h1>
+    <h1>Toutes les series de la table program :</h1>
+    {% for program in programs %}
+    <div>
+        <h2>{{ loop.index }} / {{ program.title }} - Catégorie : {{ program.category.name }}</h2>
+        <p>{{ program.synopsis }}</p>
+        <a href="{{ path("program_show", { id: program.id}) }}">Voir la fiche</a>
+    </div>
+    {% else %}
+     Aucun série trouvé.
+    {% endfor %}
 
 {% endblock %}
