--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,7 +1,14 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Wild Series{% endblock %}
+{% block title %}Série #{{ program.id }}{% endblock %}
 
 {% block body %}
-    <h1>Page number {{ page }}.</h1>
+    <div class="media d-flex justify-content-center">
+        <div class="media-body d-flex flex-column align-items-center">
+            <h1 class="mt-0">{{ program.title }}</h1>
+            <img class=" mr-3 w-25" src="{{ asset( program.poster ) }}" alt="{{ program.title }} poster">
+            <p>{{ program.synopsis }}</p>
+            <p>Catégorie : {{ program.category.name }}</p>
+        </div>
+    </div>
 {% endblock %}
