--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -8,7 +8,7 @@
  {% for program in programs %}
 
     <div class="media">
-        <img class="align-self-start mr-3 w-25" src="{{ asset( program.poster ) }}" alt="{{ program.title }} poster">
+        <img class="align-self-start mr-3 w-25" src="" alt="{{ program.title }} poster">
         <div class="media-body">
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.synopsis }}</p>
