--- a/templates/category/show.html.twig
+++ b/templates/category/show.html.twig
@@ -3,16 +3,17 @@
 {% block title %}Série #{% endblock %}
 
 {% block body %}
-    <p>{{categoryName}}</p>
-
+    <H1>{{categoryName}}</H1>
+{{ dump() }}
  {% for program in programs %}
 
     <div class="media">
-        <img class="align-self-start mr-3 w-25" src="" alt="{{ program.title }} poster">
+       {# <img class="align-self-start mr-3 w-25" src="" alt="{{ program.title }} poster">#}
         <div class="media-body">
             <h1 class="mt-0">{{ program.title }}</h1>
             <p>{{ program.synopsis }}</p>
            <p>Titre: {{ program.synopsis}}</p>
+
         </div>
         {% endfor %}
     </div>
