--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -9,6 +9,7 @@
             <h2>Liste des épisode</h2>
             {% for episode in season.episodes %}
             <p>{{ loop.index }} / {{ episode.title }}</p>
+                <p>{{ episode.synopsis }}</p>
             {% endfor %}
             <p></p>
 
