--- a/assets/styles/modules/_variables.scss
+++ b/assets/styles/modules/_variables.scss
@@ -7,7 +7,8 @@
   --textColor: white;
 }
 
-.WS_btn{
+.WS_btn,
+.WS_btnFiche{
   border: 1px solid black;
   border-radius: 10px;
   background: var(--thirdColor);
