--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,48 +1,47 @@
 <nav class="navbar navbar-expand-lg">
     <div class=" container-fluid">
-            {#ligne pour icone #}
+        {# ligne pour icone #}
         <img src="{{ asset('build/images/logo.png') }}" alt="logo">
         <a class="navbar-brand" href="{{ path('app_index') }}">Wild Series</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse WS_container" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                <li class="nav-item dropdown">
-                    <a class=" WS_btn nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                {#<li class="nav-item dropdown">
+                    <a class=" WS_btn nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
                         Categories
-
                     </a>
                     <ul class="dropdown-menu ms-5">
-
-                        {#{% for categorie in categories %}
-                            <div>
-                                <li><a href="{{ path("category_show", { categoryName : categorie.name }) }}">{{ categorie.name}}</a></li>
-                            </div>
-                        {% else %}
-                            Aucune catégorie trouvé.
-                        {% endfor %}#}
-                        <li><a class="dropdown-item me-2" href="{{path('category_index')}}">catégorie</a></li
-                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item me-2" href="{{ path('category_index') }}">catégorie</a></li
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
+                    </ul>#}
                 </li>
                 <li class="nav-item dropdown">
-                    <a class=" WS_btn nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    <a class=" WS_btn nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                       aria-expanded="false">
                         Acteur
 
                     </a>
                     <ul class="dropdown-menu">
-            <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+                        <form class="d-flex" role="search">
+                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                        </form>
 
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a class="WS_btn nav-link" href="{{ path('program_index') }}">Mes Séries</a>
+                </li>
+                <li class="nav-item">
+                    <a class="WS_btn nav-link" href="{{ path('category_index') }}">Mes Catégories</a>
                 </li>
             </ul>
         </div>
