--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -7,7 +7,7 @@
         <div class="media-body d-flex flex-column align-items-center">
             <h1 class="mt-0">{{ program.title }}</h1>
             <h2>Liste des épisode</h2>
-
+{{ dump(season.episodes) }}
             {% for episode in season.episodes %}
             <p>{{ loop.index }} / {{ episode.title }}</p>
                 <a class="WS_btnFiche" href="{{ path("program_episode_show", { programId: program.id, seasonId: season.id, episodeId: episode.id}) }}">Voir la fiche</a>
