--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -14,6 +14,15 @@
         <h3> {{ program.title }}  </h3>
         <a class="WS_btnFiche" href="{{ path("program_show", { id: program.id}) }}">Voir la fiche</a>
     </div>
+        <strong>Acteurs :</strong>
+        <ul>
+            {% for actor in program.actors %}
+
+                <a  href="{{ path("actor_show", { id: actor.id}) }}">{{ actor.name }}</a>
+            {% else %}
+                <li>Aucun acteur pour cette série</li>
+            {% endfor %}
+        </ul>
     {% else %}
      Aucun série trouvé.
     {% endfor %}
