--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -62,6 +62,8 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="{{ path('program_new') }}">Ajout d'un programme</a></li>
+                        </li>
+                        <li><a class="dropdown-item" href="{{ path('episode_new') }}">Ajout d'un épisode</a></li>
                     </ul>
             </ul>
         </div>
