--- a/templates/episode/new.html.twig
+++ b/templates/episode/new.html.twig
@@ -3,6 +3,7 @@
 {% block title %}New Episode{% endblock %}
 
 {% block body %}
+    {{ dump() }}
     <h1>Create new Episode</h1>
 
     {{ include('episode/_form.html.twig') }}
