commit quete20 ok

--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -64,6 +64,8 @@
                         <li><a class="dropdown-item" href="{{ path('program_new') }}">Ajout d'un programme</a></li>
                         </li>
                         <li><a class="dropdown-item" href="{{ path('episode_new') }}">Ajout d'un épisode</a></li>
+                        </li>
+                        <li><a class="dropdown-item" href="{{ path('actor_new') }}">Ajout d'un acteur</a></li>
                     </ul>
             </ul>
         </div>
