--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -6,7 +6,8 @@
     <div class="media d-flex justify-content-center">
         <div class="media-body d-flex flex-column align-items-center">
             <h1 class="mt-0">{{ program.title }}</h1>
-            <img class=" mr-3 w-25" src="" alt="{{ program.title }} poster">
+
+            <img src="{{ vich_uploader_asset(program) }}" alt="{{ program.title }}">
             <p>{{ program.synopsis }}</p>
             <p>Catégorie : {{ program.category.name }}</p>
             <p>Durée : {{ programDuration }} minutes</p>
