--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -4,6 +4,6 @@
 @import "modules/category.scss";
 
 body {
-    background-color: var(--secondaryColor);
+    background-color: green;
     color: white;
 }
