--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse WS_container" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                {#<li class="nav-item dropdown">
+                {# <li class="nav-item dropdown">
                     <a class=" WS_btn nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                        aria-expanded="false">
                         Categories
@@ -21,7 +21,7 @@
                             <hr class="dropdown-divider">
                         </li>
                         <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>#}
+                    </ul> #}
                 </li>
                 <li class="nav-item dropdown">
                     <a class=" WS_btn nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -57,7 +57,8 @@
                         Formulaire
                     </a>
                     <ul class="dropdown-menu ms-5">
-                        <li><a class="dropdown-item me-2" href="{{ path('category_new') }}">Ajout d'une catégorie</a></li
+                        <li><a class="dropdown-item me-2" href="{{ path('category_new') }}">Ajout d'une catégorie</a>
+                        </li
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -69,16 +70,20 @@
                     </ul>
             </ul>
         </div>
-        <div class="collapse navbar-collapse WS_container" id="navbarSupportedContent">
+        {% if app.user %}
+            <div class="collapse navbar-collapse WS_container" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
-                <li class="nav-item">
-                    <a class="nav-link" href="program">Déconnexion</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="program">John Doo</a>
-                </li>
+            {{ app.user.email }}
+
+            <a href="{{ path('app_logout') }}"> Se déconnecter</a>
+
+        {% else %}
+
+            <a href="{{ path('app_login') }}"> Se connecter</a>
+
             </ul>
-        </div>
+            </div>
+        {% endif %}
     </div>
 </nav>
